[gd_scene load_steps=13 format=3 uid="uid://rce2ygcp7xub"]

[ext_resource type="Script" uid="uid://bkfa2610ptws8" path="res://Player/player.gd" id="1_4ntmi"]
[ext_resource type="Texture2D" uid="uid://bf234f64fg8t0" path="res://Textures/Player/Riley_sprites.png" id="2_btcbx"]
[ext_resource type="PackedScene" uid="uid://130f3uqe2lmw" path="res://Utility/hurt_box.tscn" id="3_btcbx"]
[ext_resource type="Texture2D" uid="uid://ucu8d7lw011" path="res://Textures/GUI/barra_under.png" id="4_vtle1"]
[ext_resource type="Texture2D" uid="uid://c45kqm5smkweo" path="res://Textures/GUI/barra_progress.png" id="5_od3ui"]
[ext_resource type="FontFile" uid="uid://7q7usjv6di0v" path="res://Font/tenderness.otf" id="6_od3ui"]
[ext_resource type="AudioStream" uid="uid://c7q21ncm115e3" path="res://Audio/SoundEffect/levelup.ogg" id="7_vtle1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ntmi"]
radius = 6.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwnis"]
size = Vector2(11, 21)

[sub_resource type="CircleShape2D" id="CircleShape2D_btcbx"]
radius = 328.002

[sub_resource type="CircleShape2D" id="CircleShape2D_gwnis"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_k53q1"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_4ntmi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(5.36442e-07, -1.07288e-06)
scale = Vector2(0.0972973, 0.09375)
texture = ExtResource("2_btcbx")
hframes = 2

[node name="walkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, -1)
shape = SubResource("CapsuleShape2D_4ntmi")

[node name="HurtBox" parent="." instance=ExtResource("3_btcbx")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_gwnis")

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="TornadoTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="TornadoAttackTimer" type="Timer" parent="Attack/TornadoTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="JavelinBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_btcbx")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_gwnis")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_k53q1")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="XpBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 83.375
offset_top = 20.0
offset_right = 714.375
offset_bottom = 60.0
scale = Vector2(0.75, 0.75)
texture_under = ExtResource("4_vtle1")
texture_progress = ExtResource("5_od3ui")

[node name="lbl_level" type="Label" parent="GUILayer/GUI/XpBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 540.0
offset_right = 640.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("6_od3ui")
theme_override_font_sizes/font_size = 16
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 0
offset_left = 800.0
offset_top = 60.0
offset_right = 1000.0
offset_bottom = 310.0

[node name="lvl_levelUp" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_od3ui")
text = "Level Up!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="sound_levelUp" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("7_vtle1")
volume_db = -15.0

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer" to="." method="_on_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer/TornadoAttackTimer" to="." method="_on_tornado_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]

[editable path="HurtBox"]
